--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* 폰트 */
 * {
   font-family: 'Ubuntu', sans-serif;
-  box-sizing:content-box;
+  box-sizing: border-box;
 }
 /* 배경 이미지 */
 body {
@@ -23,31 +23,32 @@ body {
 }
 #name-form input {
   width: 35%;
-  line-height: 50px;
+  line-height: 70px;
   border: none;
   border-radius: 10px;
   margin-top: 4%;
+  padding-left: 20px;
   font-size: 30px;
   color: #666;
 }
 #name-form input:hover {
   width: 37%;
-  line-height: 55px;
+  line-height: 75px;
   transition: 0.2s;
 }
 #name-form input:focus {
   width: 37%;
-  line-height: 55px;
+  line-height: 75px;
 }
 #name-form input::placeholder {
-  font-size: 20px;
+  font-size: 25px;
   color: #bbb;
   padding-left: 10px;
 }
 /* 인사말 출력 */
 #title-name {
   text-align: right;
-  font-size: 40px;
+  font-size: 60px;
   margin-top: 3%;
   margin-right: 3%;
   color: #456;
@@ -66,12 +67,13 @@ body {
   color: inherit;
 }
 #icon span {
-  font-size: 30px;
+  font-size: 40px;
   margin: 0.5% 5% 3% 6%;
 }
 #icon a span:hover {
   transform:scale(1.1);
   transition: 0.1s;
+  color: #234;
 }
 
 
@@ -83,12 +85,12 @@ body {
   color: #666;
 }
 #quotes span:first-child {
-  font-size: 13px;
+  font-size: 17px;
   padding-bottom: 1%;
   border-bottom: 1px dashed #999;
 }
 #quotes span:last-child {
-  font-size: 11px;
+  font-size: 13px;
 }
 
 
@@ -102,19 +104,21 @@ body {
   color: #555;
   padding-top: 0.1%;
   border-top: 1px solid #fff;
-  font-size: 17px;
+  font-size: 25px;
 }
 /* 날씨 */
 #weather {
   position: fixed;
   left: 1%;
-  bottom: 7%;
+  bottom: 6%;
   color: #555;
-  font-size: 13px;
+  font-size: 16px;
 }
 #weather img {
   position: absolute;
-  left: 1%;
-  bottom: 9%;
-  width: 80px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  bottom: 50%;
+  width: 90px;
 }
