--- a/css/light_theme.css
+++ b/css/light_theme.css
@@ -1,14 +1,15 @@
+/* 라이트 모드 css */
 /* 폰트 */
 * {
   font-family: 'Ubuntu', sans-serif;
   box-sizing: border-box;
 }
-/* 배경 이미지 */
 body {
   height: 100vh;
-  background-image: url('../img/3.jpg');
+  background-image: url('../img/main_light.jpg');
   background-repeat : no-repeat;
   background-size : cover;
+  overflow: hidden;
 }
 .hidden {
   display: none;
@@ -49,11 +50,18 @@ body {
 #title-name {
   text-align: right;
   font-size: 60px;
-  margin-top: 3%;
-  margin-right: 3%;
+  margin: 3% 3%;
   color: #456;
+  animation: fadein 1s;
 }
-
+@keyframes fadein {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
 
 
 
@@ -68,7 +76,7 @@ body {
 }
 #icon span {
   font-size: 40px;
-  margin: 0.5% 5% 3% 6%;
+  margin: 0.5% 3% 3%;
 }
 #icon a span:hover {
   transform:scale(1.1);
@@ -117,8 +125,37 @@ body {
 #weather img {
   position: absolute;
   margin: 0 auto;
-  left: 0;
+  left: -10%;
   right: 0;
   bottom: 50%;
   width: 90px;
+}
+
+
+
+/* 다크 모드 버튼 */
+#turnMode {
+  position: fixed;
+  right: 2%;
+  bottom: 4%;
+  width: 80px;
+  height: 30px;
+  background-color: #444;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 12px;
+  color: #ddd;
+  font-weight: 900;
+  box-shadow: 2px 2px 2px 2px #888;
+}
+#turnMode:hover {
+  width: 85px;
+  height: 35px;
+  line-height: 35px;
+  font-size: 13px;
+
+  background-color: #222;
+  transition: 0.1s;
 }
