--- a/css/dark_theme.css
+++ b/css/dark_theme.css
@@ -52,7 +52,7 @@ body {
   text-align: right;
   font-size: 60px;
   margin: 3% 3%;
-  color: #889898;
+  color: #99a9a9;
   animation: fadein 1s;
 }
 @keyframes fadein {
