--- a/css/dark_theme.css
+++ b/css/dark_theme.css
@@ -24,7 +24,7 @@ body {
 }
 #name-form input {
   width: 35%;
-  line-height: 70px;
+  height: 70px;
   border: none;
   border-radius: 10px;
   margin-top: 4%;
@@ -159,4 +159,213 @@ body {
 
   background-color: #cfcfcf;
   transition: 0.1s;
+}
+
+
+
+
+
+/* 반응형 */
+/* 모바일 */
+@media (max-width: 470px){
+  /* 유저 이름 입력 */
+  #name-form {
+    text-align: left;
+  }
+  #name-form input {
+    margin-top: 85%;
+    width: 70%;
+    height: 50px;
+    font-size: 20px;
+  }
+  #name-form input:hover {
+    width: 73%;
+    line-height: 55px;
+  }
+  #name-form input:focus {
+    width: 73%;
+    line-height: 55px;
+  }
+  #name-form input::placeholder {
+    font-size: 20px;
+  }
+  /* 인사말 출력 */
+  #title-name {
+    padding-top: 85%;
+    text-align: left;
+    font-size: 45px;
+  }
+
+  /* 이동 아이콘 */
+  #icon {
+    text-align: left;
+  }
+  #icon span {
+    font-size: 30px;
+  }
+
+  /* 명언 */
+  #quotes {
+    text-align: left;
+  }
+  #quotes span:first-child {
+    font-size: 14px;
+  }
+  #quotes span:last-child {
+    font-size: 12px;
+  }
+
+  /* 시계 */
+  #clock {
+    font-size: 15px;
+  }
+  /* 날씨 */
+  #weather {
+    bottom: 27px;
+    font-size: 14px;
+  }
+  #weather img {
+    left: -11%;
+    width: 60px;
+  }
+
+  /* 다크 모드 버튼 */
+  #turnMode {
+   width: 65px;
+   height: 25px;
+   line-height: 25px;
+   font-size: 8px;
+  }
+  #turnMode:hover {
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 11px;
+  }
+}
+/* 테블릿 */
+@media (min-width: 471px) and (max-width: 767px) {
+  /* 유저 이름 입력 */
+  #name-form input {
+    width: 45%;
+    height: 50px;
+    font-size: 18px;
+  }
+  #name-form input:hover {
+    width: 50%;
+  }
+  #name-form input:focus {
+    width: 50%;
+  }
+  #name-form input::placeholder {
+    font-size: 18px;
+  }
+  /* 인사말 출력 */
+  #title-name {
+    font-size: 40px;
+  }
+
+  /* 이동 아이콘 */
+  #icon span {
+    font-size: 25px;
+  }
+
+  /* 명언 */
+  #quotes span:first-child {
+    font-size: 13px;
+  }
+  #quotes span:last-child {
+    font-size: 11px;
+  }
+   
+  /* 시계 */
+  #clock {
+   font-size: 15px;
+  }
+  /* 날씨 */
+  #weather {
+    bottom: 27px;
+    font-size: 14px;
+  }
+  #weather img {
+    left: -20%;
+    width: 50px;
+  }
+
+  /* 다크 모드 버튼 */
+  #turnMode {
+    width: 65px;
+    height: 25px;
+    line-height: 25px;
+    font-size: 8px;
+  }
+  #turnMode:hover {
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 11px;
+  }
+}
+/* 테블릿 가로 */
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* 유저 이름 입력 */
+  #name-form input {
+    width: 45%;
+    height: 50px;
+    font-size: 18px;
+  }
+  #name-form input:hover {
+    width: 50%;
+  }
+  #name-form input:focus {
+    width: 50%;
+  }
+  #name-form input::placeholder {
+    font-size: 18px;
+  }
+  /* 인사말 출력 */
+  #title-name {
+    font-size: 50px;
+  }
+
+  /* 이동 아이콘 */
+  #icon span {
+    font-size: 30px;
+  }
+
+  /* 명언 */
+  #quotes span:first-child {
+    font-size: 14px;
+  }
+  #quotes span:last-child {
+    font-size: 12px;
+  }
+   
+  /* 시계 */
+  #clock {
+   font-size: 16px;
+ }
+ /* 날씨 */
+ #weather {
+   bottom: 27px;
+   font-size: 15px;
+ }
+ #weather img {
+   left: -20%;
+   width: 50px;
+ }
+ 
+  /* 다크 모드 버튼 */
+  #turnMode {
+   width: 65px;
+   height: 25px;
+   line-height: 25px;
+   font-size: 8px;
+  }
+  #turnMode:hover {
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 11px;
+  }
 }
