--- a/css/todo_dark.css
+++ b/css/todo_dark.css
@@ -37,7 +37,7 @@ body {
   left: 0;
   right: 0;
   top: 17vh;
-  padding: 0 0 0 2%;
+  padding: 0 5% 0 2%;
 
   width: 45vw;
   height: 8vh;
@@ -46,7 +46,7 @@ body {
   border-radius: 5px;
   font-size: 18px;
   color: #222;
-  background-color: #ccc;
+  background-color: #aaa;
 }
 #todo-form input::placeholder {
   color: #888;
@@ -91,7 +91,7 @@ body {
 
   width: 45vw;
   height: 50vh;
-  background-color: #ccc;
+  background-color: #aaa;
   opacity: 0.95;
   border-radius: 5px;
   overflow: scroll;
