--- a/css/todo_light.css
+++ b/css/todo_light.css
@@ -172,7 +172,7 @@ body {
 #weather {
   position: fixed;
   left: 1%;
-  bottom: 6%;
+  bottom: 50px;
   color: #dfdfdf;
   font-size: 16px;
 }
@@ -474,149 +474,59 @@ body {
 /* 반응형 */
 /* 모바일 */
 @media (max-width: 470px){
+  /* To-do 제목 */
   #todo-form h1 {
-    color: #fff;
-    margin: 0;
-    position: fixed;
-    left: 27.5vw;
-    top: 7vh;
-    font-size: 40px;
+    left: 15vw;
+    font-size: 25px;
   }
   /* todo 입력창 */
   #todo-form input {
-    position: fixed;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 17vh;
-    padding: 0 0 0 2%;
-  
-    width: 45vw;
-    height: 8vh;
-    
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
+    width: 70vw;
+    padding-right: 10%;
   }
   #todo-form input::placeholder {
     color: #bbb;
-    font-size: 18px;
+    font-size: 15px;
   }
   /* + 아이콘 */
   #todo-form #plusIcon {
-    position: fixed;
-    top: 21vh;
-    transform:translateY(-50%);
-    right: 30vw;
-  
-    font-size: 40px;
-    color: #28f;
-  }
-  #todo-form #plusIcon:hover {
-    color: #06d;
+    right: 18vw;
+    font-size: 30px;
   }
   /* 구분선 */
   #line {
-    width: 50vw;
-    height: 1px;
-    position: fixed;
-    margin: 0 auto;
-    top: 28vh;
-    left: 0;
-    right: 0;
-    background-color: #fff;  
-    border: 0;
+    width: 70vw;
   }
-  
-  
-  
+
   /* todo list 배경*/
   #todo-Box {
-    position: fixed;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 33%;
-    bottom: 0;
-  
-    width: 45vw;
+    width: 70vw;
     height: 50vh;
-    background-color: #fff;
-    opacity: 0.95;
-    border-radius: 5px;
-    overflow: scroll;
-  }
-  /* 스크롤바 숨기기 */
-  #todo-Box::-webkit-scrollbar {
-    display:none;
   }
   /* todo list */
   #todo-Box #todo-list {
-    width: 80%;
-    padding-left: 10%;
-    color: #333;
-    font-size: 17px;
-  }
-  #todo-Box #todo-list li {
-    position: relative;
-    margin: 5% 0;
-    list-style: none;
-    border-bottom: 1px #efefef solid;
+    font-size: 15px;
   }
   #todo-Box #todo-list li input{
-    position: absolute;
-    left: -8%;
-    top: 50%;
-    transform:translateY(-50%);
+    left: -11%;
   }
   #todo-Box #todo-list li span.material-icons {
-    position: absolute;
-    right: -15%;
-    top: 50%;
-    transform:translateY(-50%);
-    color: #aaa;
-    font-size: 27px;
+    font-size: 23px;
   }
-  #todo-Box #todo-list li span.material-icons:hover {
-    color: #333;
-  }
-  
-  
+
   /* 이동 아이콘 */
-  #icon {
-    position: fixed;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    bottom: 5%;
-    text-align: center;
+   #icon a span {
+    font-size: 35px;
   }
-  #icon a {
-    text-decoration: none;
-    color: inherit;
-  }
-  #icon a span {
-    color: #fff;
-    margin: 0 2%;
-    font-size: 40px;
-  }
-  #icon a span:hover {
-    color: #dfdfdf;
-    transform:scale(1.1);
-    transition: 0.1s;
-  }
-  
-  
-  
-  
+
   /* 시계 */
   #clock {
-    font-size: 17px;
+    font-size: 15px;
   }
   /* 날씨 */
   #weather {
-    bottom: 5%;
-    font-size: 15px;
+    bottom: 27px;
+    font-size: 14px;
   }
   #weather img {
     left: -11%;
@@ -625,70 +535,165 @@ body {
 
   /* 다크 모드 버튼 */
   #turnMode {
-    bottom: 2%;
     width: 65px;
     height: 25px;
     line-height: 25px;
-    font-size: 10px;
-  
+    font-size: 8px;
+  }
+  #turnMode:hover {
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 11px;
+  }
 }
-/* 테블릿 */
+/* 테블릿 세로 */
 @media (min-width: 471px) and (max-width: 767px) {
+  /* To-do 제목 */
+  #todo-form h1 {
+    top: 4vh;
+    left: 20vw;
+    font-size: 32px;
+  }
+  /* todo 입력창 */
+  #todo-form input {
+    width: 60vw;
+    padding-right: 10%;
+  }
+  #todo-form input::placeholder {
+    color: #bbb;
+    font-size: 17px;
+  }
+  /* + 아이콘 */
+  #todo-form #plusIcon {
+    right: 22vw;
+    font-size: 30px;
+  }
+  /* 구분선 */
+  #line {
+    width: 60vw;
+  }
+
+  /* todo list 배경*/
+  #todo-Box {
+    width: 60vw;
+    height: 50vh;
+  }
+  /* todo list */
+  #todo-Box #todo-list {
+    font-size: 16px;
+  }
+  #todo-Box #todo-list li input{
+    left: -11%;
+  }
+  #todo-Box #todo-list li span.material-icons {
+    font-size: 25px;
+  }
+
+  /* 이동 아이콘 */
+   #icon a span {
+    font-size: 40px;
+  }
+  
   /* 시계 */
   #clock {
-    font-size: 13px;
+    font-size: 15px;
   }
   /* 날씨 */
   #weather {
-    bottom: 27px;
-    font-size: 13px;
+    bottom: 30px;
+    font-size: 14px;
   }
   #weather img {
     left: -20%;
     width: 50px;
   }
- 
-  /* 다크 모드 버튼 */
-  #turnMode {
-    width: 60px;
-    height: 25px;
-    line-height: 25px;
-    font-size: 8px;
-   }
-   #turnMode:hover {
-     width: 65px;
-     height: 35px;
-     line-height: 35px;
-     font-size: 13px;
-   }
-}
-/* 테블릿 가로 */
-@media (min-width: 768px) and (max-width: 1199px) {
- /* 시계 */
- #clock {
-  font-size: 15px;
-}
-/* 날씨 */
-#weather {
-  bottom: 5%;
-  font-size: 14px;
-}
-#weather img {
-  left: -30%;
-  width: 60px;
-}
 
-/* 다크 모드 버튼 */
-#turnMode {
-  width: 60px;
+ /* 다크 모드 버튼 */
+ #turnMode {
+  width: 65px;
   height: 25px;
   line-height: 25px;
   font-size: 8px;
  }
  #turnMode:hover {
-   width: 65px;
+   width: 70px;
    height: 30px;
-   line-height: 35px;
+   line-height: 30px;
    font-size: 11px;
  }
+}
+/* 테블릿 가로 */
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* To-do 제목 */
+  #todo-form h1 {
+    left: 22.5vw;
+    font-size: 40px;
+  }
+  /* todo 입력창 */
+  #todo-form input {
+    width: 55vw;
+    padding-right: 9%;
+  }
+  #todo-form input::placeholder {
+    color: #bbb;
+    font-size: 18px;
+  }
+  /* + 아이콘 */
+  #todo-form #plusIcon {
+    right: 25vw;
+    font-size: 35px;
+  }
+  /* 구분선 */
+  #line {
+    width: 55vw;
+  }
+
+  /* todo list 배경*/
+  #todo-Box {
+    width: 55vw;
+    height: 50vh;
+  }
+  /* todo list */
+  #todo-Box #todo-list {
+    font-size: 17px;
+  }
+  #todo-Box #todo-list li input{
+    left: -10%;
+  }
+  #todo-Box #todo-list li span.material-icons {
+    font-size: 27px;
+  }
+
+  /* 이동 아이콘 */
+   #icon a span {
+    font-size: 40px;
+  }
+  /* 시계 */
+  #clock {
+   font-size: 18px;
+  }
+  /* 날씨 */
+  #weather {
+    bottom: 35px;
+    font-size: 16px;
+  }
+  #weather img {
+    left: -20%;
+    width: 60px;
+  }
+ 
+  /* 다크 모드 버튼 */
+  #turnMode {
+   width: 65px;
+   height: 25px;
+   line-height: 25px;
+   font-size: 8px;
+  }
+  #turnMode:hover {
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 11px;
+  }
 }
